# comparador_de_precios

./: .gitignore  README.md  SETUP.txt  kache.postman_collection.json  pyproject.toml
.github/workflows/: deploy.yml
apps/catalogo/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/catalogo/migrations/: 0001_initial.py
apps/comercios/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/comercios/migrations/: 0001_initial.py
apps/comparador/: admin.py  apps.py  crear_comparador.ps1  models.py  serializers.py  urls.py  views.py
apps/comparador/migrations/: 0001_initial.py  0002_initial.py
apps/emails/: models.py  serializers.py  urls.py  views.py
apps/extras/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/extras/migrations/: 0001_initial.py  0002_initial.py
apps/precios/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/precios/migrations/: 0001_initial.py
apps/scraper/: apps.py
apps/scraper/management/commands/: scrapear_coral.py  scrapear_supermaxi.py  unificar_productos_demo.py
apps/users/: admin.py  models.py  serializers.py  urls.py  urls_auth.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
