[project]
name = "shopbackend"
version = "0.1.0"
description = "Backend Django REST para ShopApplication"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.4",
    "django-filter>=24.3",
    "python-decouple>=3.8",
    "pillow>=10.4",
    "psycopg2-binary>=2.9",
    "playwright>=1.45",
]

[tool.hatch.build.targets.wheel]
packages = ["config", "apps"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
